frame/support/test/tests/pallet_ui/dev_mode_without_arg.stderr
error: A pallet::call requires either a concrete weight via `#[pallet::weight]` or an inherited one from the `#[pallet:call(trait  ...)]` attribute but none were given.
  --> tests/pallet_ui/dev_mode_without_arg.rs:22:7
   |
22 |         pub fn my_call(_origin: OriginFor<T>) -> DispatchResult {
   |             ^^
